--- a/scrwebm_net3/scrwebm_net3.csproj
+++ b/scrwebm_net3/scrwebm_net3.csproj
@@ -371,6 +371,8 @@
     <EmbeddedResource Include="reports\consultas\montosPendientesPagoVencimientos\report.rdlc" />
     <EmbeddedResource Include="reports\consultas\montosPendientes\report-excel.rdlc" />
     <EmbeddedResource Include="reports\consultas\montosPendientes\report.rdlc" />
+    <EmbeddedResource Include="reports\riesgos\report-masSumaAsegurada-excel.rdlc" />
+    <EmbeddedResource Include="reports\riesgos\report-masSumaAsegurada.rdlc" />
     <EmbeddedResource Include="reports\riesgos\report-excel.rdlc" />
     <EmbeddedResource Include="reports\riesgos\report.rdlc" />
   </ItemGroup>
