--- a/scrwebm_net3/webAppSettings.config
+++ b/scrwebm_net3/webAppSettings.config
@@ -1,4 +1,4 @@
 ﻿
 <appSettings>
-  <add key="scrwebm_mongodb_name" value="scrwebm_arsa2" />
+  <add key="scrwebm_mongodb_name" value="scrwebm_arsa" />
 </appSettings>
