--- a/scrwebm_net3/webAppSettings.config
+++ b/scrwebm_net3/webAppSettings.config
@@ -6,10 +6,10 @@
 <!--
   previous mongodb connection - saved it here just for backup: 
   mongodb://scrwebm_user:isabel@cluster0-shard-00-00-lwzxe.mongodb.net:27017,cluster0-shard-00-01-lwzxe.mongodb.net:27017,cluster0-shard-00-02-lwzxe.mongodb.net:27017/scrwebm_arsa?ssl=true&amp;replicaSet=Cluster0-shard-0&amp;authSource=admin&amp;retryWrites=true
+  mongodb://scrwebm_admin:isabel@cluster0-shard-00-00-lwzxe.mongodb.net:27017,cluster0-shard-00-01-lwzxe.mongodb.net:27017,cluster0-shard-00-02-lwzxe.mongodb.net:27017/test?ssl=true&amp;replicaSet=Cluster0-shard-0&amp;authSource=admin&amp;retryWrites=true
   -->
 
 <appSettings>
-  <add key="scrwebm_mongodb_connectionString" 
-       value="mongodb://scrwebm_admin:isabel@cluster0-shard-00-00-lwzxe.mongodb.net:27017,cluster0-shard-00-01-lwzxe.mongodb.net:27017,cluster0-shard-00-02-lwzxe.mongodb.net:27017/test?ssl=true&amp;replicaSet=Cluster0-shard-0&amp;authSource=admin&amp;retryWrites=true" />
+  <add key="scrwebm_mongodb_connectionString" value="mongodb://localhost:27017/scrwebm_arsa" />
   <add key="scrwebm_mongodb_name" value="scrwebm_arsa" />
 </appSettings>
