--- a/scrwebm_net3/bin/scrwebm_net3.dll.config
+++ b/scrwebm_net3/bin/scrwebm_net3.dll.config
@@ -6,7 +6,7 @@
   -->
 <configuration>
   <system.web>
-    <compilation debug="false" targetFramework="4.6.1">
+    <compilation debug="true" targetFramework="4.6.1">
       <buildProviders>
         <add extension=".rdlc" type="Microsoft.Reporting.RdlBuildProvider, Microsoft.ReportViewer.WebForms, Version=14.0.0.0, Culture=neutral, PublicKeyToken=89845DCD8080CC91"/>
       </buildProviders>
